<package format="2">
  <name>mapviz_plugins</name>
  <version>1.1.0</version>
  <description>

    Common plugins for the Mapviz visualization tool

  </description>
  <author>Marc Alban</author>
  <maintainer email="malban@swri.org">Marc Alban</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/mapviz</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>qt_qmake</buildtool_depend>

  <build_depend>libqt_dev</build_depend>
  <build_depend>libqt_opengl_dev</build_depend>

  <depend>actionlib</depend>
  <depend>cv_bridge</depend>
  <depend>gps_common</depend>
  <depend>image_transport</depend>
  <depend>mapviz</depend>
  <depend>marti_common_msgs</depend>
  <depend>marti_nav_msgs</depend>
  <depend>marti_visualization_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>map_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>stereo_msgs</depend>
  <depend>swri_image_util</depend>
  <depend>swri_math_util</depend>
  <depend>swri_route_util</depend>
  <depend>swri_transform_util</depend>
  <depend>swri_yaml_util</depend>
  <depend>tf</depend>
  <depend>visualization_msgs</depend>
  
  <exec_depend>libqt_core</exec_depend>
  <exec_depend>libqt_opengl</exec_depend>

  <export>
    <mapviz plugin="${prefix}/mapviz_plugins.xml" />
  </export>

</package>


