<package format="2">
  <name>multires_image</name>
  <version>1.4.3</version>
  <description>

     multires_image

  </description>
  <author>Marc Alban</author>
  <maintainer email="malban@swri.org">Marc Alban</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/mapviz</url>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>qt5-qmake</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>libqt5-opengl-dev</build_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>gps_common</depend>
  <depend>mapviz</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>swri_math_util</depend>
  <depend>swri_transform_util</depend>
  <depend>swri_yaml_util</depend>
  <depend>tf</depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
    <mapviz plugin="${prefix}/mapviz_plugins.xml" />
  </export>

</package>


