<package format="3">
  <name>tile_map</name>
  <version>2.0.0</version>
  <description>

     Tile map provides a slippy map style interface for visualizing 
     OpenStreetMap and GoogleMap tiles.  A mapviz visualization plug-in is also
     implemented

  </description>
  <author>Marc Alban</author>
  <maintainer email="preed@swri.org">P. J. Reed</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/mapviz</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>qt5-qmake</buildtool_depend>

  <build_depend>libjsoncpp-dev</build_depend>
  <depend>libqt5-core</depend>
  <build_depend>libqt5-opengl-dev</build_depend>

  <depend>libglew-dev</depend>
  <depend>mapviz</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>swri_math_util</depend>
  <depend>swri_transform_util</depend>
  <depend>tf2</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>libjsoncpp</exec_depend>
  <exec_depend>libqt5-opengl</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <mapviz plugin="${prefix}/mapviz_plugins.xml" />
  </export>
</package>


